2002-01-19  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (_assuan_read_line): Add output logging.
	(assuan_write_line): Ditto.
	(_assuan_cookie_write_data): Ditto.
	(_assuan_cookie_write_flush): Ditto.
	* assuan-util.c (_assuan_log_print_buffer): New.
	(assuan_set_log_stream): New.
	(assuan_begin_confidential): New.
	(assuan_end_confidential): New.

	* assuan-defs.h: Add a few handler variables.
	* assuan-pipe-server.c (assuan_deinit_pipe_server): Removed.
	(deinit_pipe_server): New.
	(assuan_deinit_server): New.  Changed all callers to use this.
	* assuan-listen.c (assuan_accept): Use the accept handler.
	* assuan-handler.c (process_request): Use the close Handler.
	* assuan-socket-server.c: New.

2002-01-14  Werner Koch  <wk@gnupg.org>

	* assuan-client.c (_assuan_read_from_server): Skip spaces after
	the keyword.

2002-01-03  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (assuan_set_okay_line): New.
	(process_request): And use it here.

2002-01-02  Werner Koch  <wk@gnupg.org>

	* assuan-inquire.c (init_membuf,put_membuf,get_membuf): Apply a
	hidden 0 behind the buffer so that the buffer can be used as a
	string in certain contexts.

2001-12-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-connect.c (assuan_pipe_connect): New argument
	FD_CHILD_LIST.  Don't close those fds.
	* assuan.h: Likewise for prototype.

2001-12-14  Werner Koch  <wk@gnupg.org>

	* assuan-listen.c (assuan_close_input_fd): New.
	(assuan_close_output_fd): New.
	* assuan-handler.c (std_handler_reset): Always close them after a
	reset command.
	(std_handler_bye): Likewise.

2001-12-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-buffer.c (_assuan_read_line): New variable ATTICLEN, use
	it to save the length of the attic line.
	Rediddle the code a bit to make it more clear what happens.

2001-12-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (LINELENGTH): Define as ASSUAN_LINELENGTH.
	assuan.h: Define ASSUAN_LINELENGTH.
